--- a/IOView/IOView/App.config
+++ b/IOView/IOView/App.config
@@ -16,6 +16,9 @@
             <setting name="Tick" serializeAs="String">
                 <value>50</value>
             </setting>
+            <setting name="csvPath" serializeAs="String">
+                <value />
+            </setting>
         </IOView.Pref>
     </userSettings>
 </configuration>
