--- a/IOView/IOView/IOView.csproj
+++ b/IOView/IOView/IOView.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Help.Designer.cs">
       <DependentUpon>Help.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelpConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelpConfig.Designer.cs">
+      <DependentUpon>HelpConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="IOConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     <EmbeddedResource Include="Help.resx">
       <DependentUpon>Help.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HelpConfig.resx">
+      <DependentUpon>HelpConfig.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="IOConfig.resx">
       <DependentUpon>IOConfig.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +102,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
@@ -113,6 +123,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\IOViewBg.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
