--- a/IOView/IOView/Pref.settings
+++ b/IOView/IOView/Pref.settings
@@ -11,5 +11,8 @@
     <Setting Name="csvPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Verze" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0.3</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
